package onlineTicket;

import java.util.Date;

// Класс, представляющий пользователя системы.
class User implements UserActions {
    @Override
    public boolean authorize(String username, String password) {
// Реализация метода
        return false;
    }

    @Override
    public boolean selectRoute(String routeId, Date time) {
// Реализация метода
        return false;
    }

    @Override
    public boolean checkTicketAvailability() {
// Реализация метода
        return false;
    }

    @Override
    public boolean checkFunds() {
// Реализация метода
        return false;
    }

    /**
     * Попытка забронировать билет.
     *
     * @return true, если бронирование успешно, false в противном случае.
     * @pre User должен быть авторизован и выбран маршрут.
     * @pre Билеты на выбранный маршрут и время должны быть доступны.
     * @pre У пользователя должно быть достаточно средств для бронирования.
     * @post Билет забронирован.
     * <p>
     * Этот метод позволяет пользователю попытаться забронировать билет на выбранный маршрут и время.
     * Для успешной бронировки необходимо выполнение следующих условий:
     * - Пользователь должен быть предварительно авторизован в системе (authorize).
     * - Пользователь должен выбрать конкретный маршрут и время (selectRoute).
     * - Должны быть доступны билеты на выбранный маршрут и время (checkTicketAvailability).
     * - У пользователя должно быть достаточно средств для бронирования (checkFunds).
     * <p>
     * Если все предусловия выполняются, билет будет успешно забронирован, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, бронирование не будет произведено, и метод вернет false.
     */
    public boolean reserveTicket() {
// Проверка предусловий
        if (!isAuthorized()) {
            return false; // Пользователь не авторизован
        }

        if (!isRouteSelected()) {
            return false; // Маршрут не выбран
        }

        if (!checkTicketAvailability()) {
            return false; // Билеты не доступны
        }

        if (!checkFunds()) {
            return false; // Недостаточно средств
        }

// Реализация бронирования билета
        if (performReservation()) {
// Постусловие: Билет успешно забронирован
            return true;
        } else {
            return false; // Ошибка при бронировании
        }
    }

    private boolean isRouteSelected() {
        return false;
    }

    public boolean deductFunds () {
// Реализация метода
        return false;
    }

        public boolean confirmPurchase () {
// Реализация метода
            return false;
        }

        public void updateTicketAvailability () {
// Реализация метода
        }

        public boolean cancelReservation () {
// Реализация метода
            return false;
        }

        private boolean performReservation () {
            return false;
        }

        private boolean isAuthorized () {
            return false;
        }

}